--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <div id="home" class="page">
         <h1>Добро пожаловать!</h1>
-        <p>Это главная страница сайта.</p>
+        <p>Это главная страница с информацией</p>
     </div>
 
     <div id="about" class="page">
         <h1>О нас</h1>
-        <p>Небольшая информация о нашей компании.</p>
+        <p>Волов Вадим Алесандрович</p>
     </div>
 
     <div id="services" class="page">
